# insider-threat-prevention

./: .gitignore  README.md  pyproject.toml
itps_project/: README_ITPS.md  advanced_itps.py  advanced_itps_complete.py  advanced_models.py  advanced_realtime_detector.py  alert_system.py  dashboard.py  dataset_generator_corrected.py  dataset_generator_duckdb_corrected.py  generate_malicious_events.py  implement_advanced_models.py  itps_system.py  model_deployment.py  plot_model_metrics.py  quick_start.py  realtime_detector.py  run_advanced_models.py  simple_model_test.py
itps_project/config/: advanced_itps_config.json  alert_config.json  itps_config.json
itps_project/models/: autoencoder_model.pkl  itps_production_model.pkl  itps_production_model_scaler.pkl  lstm_model.pkl  model_registry.json  transformer_model.pkl
itps_project/models/deployments/production_itps_production_model/: deployment_info.json  model.pkl
