[project]
name = "prevention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask[complete]>=2023.1.0",
    "duckdb>=0.8.0", 
    "pyarrow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "scikit-learn"
]
